# KarlsonRPC

./: Cargo.toml  KarlsonRPC.cs  KarlsonRPC.csproj  KarlsonRPC.sln  KarlsonRPCNOMod.sln  LICENSE  README.md  karlsonmod.cs  main.py  textprogress.py
KarlsonRPCNOMod/: KarlsonRPCNOMod.csproj
KarlsonRPCNOMod/DiscordGameSDK/: Program.cs
src/: main.rs
