[package]
name = "KarlsonRPC"
version = "2.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
discord-rich-presence = "0.2.3"

[dependencies.toy-arms]
version = "0.9.4"
default-features = false
features = ["external"]

[profile.release]
lto = true
strip = true
codegen-units = 1